# NewsWatch

./: .gitignore  Main.py  Main.spec  NewsWatch.spec  README.md  Testbed.py  map.html  newsmap.html  pyproject.toml  testbed.py
src/newswatch/: main.py
